generated/checkers/refine/KN-Null-Pointer-Dereference-a54a594d-0/build_logs/syntax-repair-refine-1-4/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static bool {anonymous}::SAGenTestChecker::isLoggingName(llvm::StringRef)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:205:22: warning: ‘bool llvm::StringRef::startswith(llvm::StringRef) const’ is deprecated: Use starts_with instead [-Wdeprecated-declarations]
  205 |          L.startswith("pr_") ||
      |          ~~~~~~~~~~~~^~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/llvm/include/llvm/ADT/SmallString.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/llvm/include/llvm/ADT/APFixedPoint.h:22,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/APValue.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/Stmt.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/Analysis/PathDiagnostic.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/llvm/include/llvm/ADT/StringRef.h:263:29: note: declared here
  263 |         "starts_with") bool startswith(StringRef Prefix) const {
      |                             ^~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:207:22: warning: ‘bool llvm::StringRef::startswith(llvm::StringRef) const’ is deprecated: Use starts_with instead [-Wdeprecated-declarations]
  207 |          L.startswith("dev_") ||
      |          ~~~~~~~~~~~~^~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/llvm/include/llvm/ADT/SmallString.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/llvm/include/llvm/ADT/APFixedPoint.h:22,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/APValue.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/Stmt.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/Analysis/PathDiagnostic.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/llvm/include/llvm/ADT/StringRef.h:263:29: note: declared here
  263 |         "starts_with") bool startswith(StringRef Prefix) const {
      |                             ^~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::isKnownNonNullExpr(const clang::Expr*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:498:31: error: ‘class clang::ento::SValBuilder’ has no member named ‘makeNull’
  498 |       SB.evalEQ(State, SV, SB.makeNull()).castAs<DefinedOrUnknownSVal>();
      |                               ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:498:70: error: expected primary-expression before ‘>’ token
  498 |       SB.evalEQ(State, SV, SB.makeNull()).castAs<DefinedOrUnknownSVal>();
      |                                                                      ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:498:72: error: expected primary-expression before ‘)’ token
  498 |       SB.evalEQ(State, SV, SB.makeNull()).castAs<DefinedOrUnknownSVal>();
      |                                                                        ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: At global scope:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:175:6: warning: ‘bool {anonymous}::SAGenTestChecker::thenHasEarlyExit(const clang::Stmt*, clang::ento::CheckerContext&) const’ defined but not used [-Wunused-function]
  175 | bool SAGenTestChecker::thenHasEarlyExit(const Stmt *Then, CheckerContext &C) const {
      |      ^~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
